--- a/src/components/Experience1.css
+++ b/src/components/Experience1.css
@@ -106,6 +106,8 @@ tr {
     .newexperienceblogTwoMainInnerDiv {
         display: flex;
         justify-content: center !important;
+        flex-direction: column !important;
+        align-items: center !important;
     }
 
     .newexperienceblogTwoMainImgCardStyle {
