--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -10,6 +10,18 @@
     opacity: 1;
 }
 
+@media screen and (min-device-width: 445px) and (max-device-width: 768px) {
+    .carouselDiv {
+        width: 70% !important;
+    }
+}
+
+/* @media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+    .App {
+        height: auto !important;
+    }
+} */
+
 @media screen and (max-width: 1280px) {
     .teamCardDiv {
         width: 70% !important;
@@ -62,10 +74,15 @@
 }
 
 /* For Tablet View */
-@media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+@media screen and (min-device-width: 768px) and (max-device-width: 1023px) {
+    .App {
+        height: auto !important;
+        margin-top: 30px !important;
+    }
+
     .teamCardDiv {
         /* display: flex !important; */
-        width: 100% !important;
+        width: 87% !important;
         /* flex-wrap: wrap; */
         /* justify-content: space-evenly; */
     }
@@ -74,6 +91,38 @@
         font-size: 60px !important;
         font-weight: 600 !important;
         margin-top: 0px !important;
+    }
+}
+
+@media screen and (min-device-width: 1025px) and (max-device-width: 1440px) {
+    .App {
+        height: auto !important;
+        margin-bottom: 30px !important;
+
+        margin-top: 30px !important;
+    }
+
+    .teamCardDiv {
+        /* display: flex !important; */
+        width: 65% !important;
+        /* flex-wrap: wrap; */
+        /* justify-content: space-evenly; */
+    }
+}
+
+@media screen and (min-device-width: 1440px) and (max-device-width: 2560px) {
+    .App {
+        height: auto !important;
+        margin-bottom: 30px !important;
+
+        margin-top: 30px !important;
+    }
+
+    .teamCardDiv {
+        /* display: flex !important; */
+        width: 65% !important;
+        /* flex-wrap: wrap; */
+        /* justify-content: space-evenly; */
     }
 }
 
