--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -94,7 +94,7 @@
     }
 }
 
-@media screen and (min-device-width: 1025px) and (max-device-width: 1440px) {
+@media screen and (min-device-width: 1024px) and (max-device-width: 1440px) {
     .App {
         height: auto !important;
         margin-bottom: 30px !important;
@@ -132,7 +132,7 @@
 
 
 .App {
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
     display: flex;
     align-items: center;
     flex-direction: column;
