--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -10,19 +10,39 @@
     opacity: 1;
 }
 
-@media screen and (max-width: 2220px) {
+@media screen and (min-width: 2221px) {
     .expRadiusDivFirHeadiing h1 {
-        font-size: 80px;
+        font-size: 77px;
+        text-align: center;
     }
 
 
     .expRadiusDivSecImg {
-        width: 54% !important;
-        height: 45% !important;
+        width: auto !important;
+        height: auto !important;
     }
 
     .expRadiusDivSecPara {
-        font-size: 25px !important;
+        font-size: 32px !important;
+        text-align: center !important;
+
+    }
+}
+
+@media screen and (max-width: 2220px) {
+    .expRadiusDivFirHeadiing h1 {
+        font-size: 77px;
+        /* text-align: center; */
+    }
+
+
+    .expRadiusDivSecImg {
+        width: auto !important;
+        height: auto !important;
+    }
+
+    .expRadiusDivSecPara {
+        font-size: 32px !important;
         text-align: center !important;
 
     }
@@ -30,13 +50,31 @@
 
 @media screen and (max-width: 1788px) {
     .expRadiusDivFirHeadiing h1 {
-        font-size: 72px;
+        font-size: 77px;
     }
 
 
     .expRadiusDivSecImg {
-        width: 50% !important;
-        height: 36% !important;
+        width: auto !important;
+        height: auto !important;
+    }
+
+    .expRadiusDivSecPara {
+        font-size: 28px !important;
+        text-align: center !important;
+
+    }
+}
+
+@media screen and (max-width: 1552px) {
+    .expRadiusDivFirHeadiing h1 {
+        font-size: 65px;
+    }
+
+
+    .expRadiusDivSecImg {
+        width: auto !important;
+        height: auto !important;
     }
 
     .expRadiusDivSecPara {
@@ -46,37 +84,19 @@
     }
 }
 
-@media screen and (max-width: 1552px) {
+@media screen and (max-width: 1280px) {
     .expRadiusDivFirHeadiing h1 {
         font-size: 62px;
     }
 
 
     .expRadiusDivSecImg {
-        width: 46% !important;
-        height: 30% !important;
+        width: auto !important;
+        height: auto !important;
     }
 
     .expRadiusDivSecPara {
-        font-size: 19px !important;
-        text-align: center !important;
-
-    }
-}
-
-@media screen and (max-width: 1280px) {
-    .expRadiusDivFirHeadiing h1 {
-        font-size: 54px;
-    }
-
-
-    .expRadiusDivSecImg {
-        width: 60% !important;
-        height: 30% !important;
-    }
-
-    .expRadiusDivSecPara {
-        font-size: 17px !important;
+        font-size: 18px !important;
         text-align: center !important;
     }
 }
@@ -247,7 +267,7 @@
 }
 
 /* For Mobile View */
-@media screen and (min-device-width: 0px) and (max-device-width: 548px) {
+@media screen and (min-device-width: 351px) and (max-device-width: 548px) {
 
 
     .expRadiusDivFirHeadiing {
@@ -258,24 +278,46 @@
     }
 
     .expRadiusDivFirHeadiing h1 {
-        font-size: 32px !important;
+        font-size: 42px !important;
     }
 
 
     .expRadiusDivSecImgPara h6 {
-        font-size: 13px !important;
+        font-size: 14px !important;
     }
 
 }
 
 @media screen and (min-device-width: 0px) and (max-device-width: 350px) {
     .expRadiusDivFirHeadiing h1 {
-        font-size: 25px !important;
+        font-size: 32px !important;
     }
 
     .expRadiusDivSecImgPara h6 {
-        font-size: 8px !important;
+        font-size: 10px !important;
     }
+}
+
+
+@media screen and (min-device-width: 548px) and (max-device-width: 767px) {
+
+
+    .expRadiusDivFirHeadiing {
+        width: 100% !important;
+        padding: 0px !important;
+        margin: 0px !important;
+
+    }
+
+    .expRadiusDivFirHeadiing h1 {
+        font-size: 52px !important;
+    }
+
+
+    .expRadiusDivSecImgPara h6 {
+        font-size: 18px !important;
+    }
+
 }
 
 
@@ -284,17 +326,18 @@
     .expRadiusDivFirHeadiing {}
 
     .expRadiusDivH1 {
-        font-size: 40px !important;
+        font-size: 52px !important;
+        text-align: center !important;
     }
 
     .expRadiusDivSecImg {
-        width: 75% !important;
-        height: 25% !important;
+        width: auto !important;
+        height: auto !important;
         /* margin-bottom: 40px; */
     }
 
     .expRadiusDivSecPara {
-        font-size: 16px !important;
+        font-size: 14px !important;
         text-align: center !important;
     }
 }
@@ -420,7 +463,7 @@
     }
 
     .expRadiusDivH1 {
-        font-size: 48px !important;
+        font-size: 68px !important;
     }
 
     .expRadiusDivFirHeadiing {
@@ -438,7 +481,7 @@
     }
 
     .expRadiusDivSecPara {
-        font-size: 17px !important;
+        font-size: 24px !important;
         text-align: center !important;
     }
 }
@@ -578,7 +621,7 @@
 
 .expRadiusDivH1 {
     font-size: 65px;
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
     font-weight: 700;
 }
 
@@ -610,5 +653,5 @@
     font-weight: 600;
     display: flex;
     justify-content: center;
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
 }
