--- a/src/components/Experience1.css
+++ b/src/components/Experience1.css
@@ -46,6 +46,25 @@ tr {
     font-size: 23px;
 }
 
+@media screen and (min-device-width: 0px) and (max-device-width: 350px) {
+    .newexperienceblogTwoMainTextStyle h5 {
+        font-weight: 700;
+        font-size: 17px !important;
+    }
+}
+
+@media screen and (min-device-width: 351px) and (max-device-width: 425px) {
+    .newexperienceblogHeading00 h1 {
+        font-size: 34px !important;
+    }
+}
+
+@media screen and (min-device-width: 426px) and (max-device-width: 768px) {
+    .newexperienceblogHeading00 h1 {
+        font-size: 44px !important;
+    }
+}
+
 /* For Tablet View */
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
     .newexperienceblogTwoMainInnerDiv {
